Bug 98971 - Intel Corporation 82801I (ICH9 Family) HD Audio Controller. Loud Squawk & Click Upon Driver Load.
Summary: Intel Corporation 82801I (ICH9 Family) HD Audio Controller. Loud Squawk & Cli...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-26 18:15 UTC by Alan Bartlett
Modified: 2015-05-27 19:28 UTC (History)
3 users (show)

See Also:
Kernel Version: 4.1-rc5
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Dmesg file, normal boot. (77.86 KB, text/plain)
2015-05-26 18:15 UTC, Alan Bartlett
Details
Test fix (469 bytes, patch)
2015-05-27 06:26 UTC, Takashi Iwai
Details | Diff
Output generated by alsa-info.sh (19.84 KB, text/plain)
2015-05-27 12:48 UTC, Alan Bartlett
Details

Description Alan Bartlett 2015-05-26 18:15:15 UTC
Created attachment 177991 [details]
Dmesg file, normal boot.

Kernel-4.1.0-0.rc5.el7.elrepo.x86_64 built from linux-4.1-rc5 sources.

Hardware --

00:1b.0 Audio device [0403]: Intel Corporation 82801I (ICH9 Family) HD Audio Controller [8086:293e] (rev 02)


At system boot, as the driver is loaded (having reached the sound card target), there is a loud squawk followed by a sharp click.

At system shutdown there is a sharp click.

The dmesg file is attached.
Comment 1 Takashi Iwai 2015-05-26 18:19:40 UTC
Is this a regression from earlier kernels?

In anyway, please give alsa-info.sh output.  Run the script with --no-upload option and attach the output to bugzilla.
Comment 2 Alan Bartlett 2015-05-26 18:31:43 UTC
Yes, this is a regression which has occurred with the 4.1-rcX series. (I have now set the regression flag.)

Excuse my ignorance but where can I find a copy of the alsa-info.sh script, please?
Comment 3 Takashi Iwai 2015-05-27 06:26:02 UTC
See Documentation/sound/alsa/HD-Audio.txt.

Also, try the patch below.
Comment 4 Takashi Iwai 2015-05-27 06:26:27 UTC
Created attachment 178041 [details]
Test fix
Comment 5 Alan Bartlett 2015-05-27 12:48:20 UTC
Created attachment 178091 [details]
Output generated by alsa-info.sh
Comment 6 Alan Bartlett 2015-05-27 18:13:52 UTC
(In reply to Takashi Iwai from comment #4)
> Created attachment 178041 [details]
> Test fix

I am pleased to report that the above patch, attachment 178041 [details], when applied to the 4.1-rc5 sources allows a "good" kernel to be built.

There is no longer any squawk/click at sound-card initialisation nor any click at system shutdown.

Thank you for your prompt attention to this problem.
Comment 7 Takashi Iwai 2015-05-27 19:28:47 UTC
Thanks, I queued the fix now.  It'll be included in the next pull request.

Note You need to log in before you can comment on or make changes to this bug.